[package]
name = "brevet"
version = "0.2.0"
edition = "2021"
description = "Evaluator for Ei calculus with dependent merges and first class environments"
readme = "README.md"
repository = "https://github.com/graydon/brevet"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = {version = "1", features = ["derive"]}
